Merge parts of match-all-modules to main